[gd_scene load_steps=2 format=3 uid="uid://bjmkjen74gsh5"]

[ext_resource type="Script" path="res://Scripts/weapon_drop.gd" id="1_btmks"]

[node name="WeaponDrop" type="Area2D"]
script = ExtResource("1_btmks")

[node name="Sprite2D" type="Sprite2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
